Fix bug about clear crete white space before and after background

--- a/main.css
+++ b/main.css
@@ -24,7 +24,8 @@ unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-
 	font-family: 'Ubuntu', Arial, serif;
 }
 
-div#column-content {
+div#column-content
+{
 	width: 100%;
 	float: right;
 	margin: 0 0 .6em -15em;
@@ -33,7 +34,7 @@ div#column-content {
 
 .mw-body
 {
-	margin: 8em 0 0 16em;
+	margin: 9em 0 0 16em;
 	padding: 1em;
 	position: relative;
 	z-index: 2;
@@ -61,7 +62,8 @@ div#column-one {
 }
 
 /* Hide, but keep accessible for screen-readers */
-#column-one h2 {
+#column-one h2
+{
 	position: absolute;
 	top: -9999px;
 }
@@ -74,11 +76,20 @@ div#column-one {
 ** http://style.cleverchimp.com/font_size_intervals/altintervals.html
 */
 
-body {
+html
+{
+	position: relative;
+	top: -100px;
+	padding-top: 100px;
+	left: 0;
+	background: url('images/background/dark.png') center no-repeat;
+	background-size: cover;
+}
+
+body
+{
 	font: 11px sans-serif;
 	/* @embed */
-	background: url('images/background/dark.png') center no-repeat;
-	/*background-size: cover;*/
 	color: rgb(230,230,230);
 	margin: 0;
 	padding: 0;
@@ -480,7 +491,7 @@ li#pt-anonuserpage
 #p-cactions
 {
 	position: absolute;
-	top: 6.8em;
+	top: 7.9em;
 	left: 16em;
 	margin: 0;
 	white-space: nowrap;
